NF: Uses jackson instead of org.json.JSON