@@ -1,4 +1,20 @@
-/*
+/***
+ * Copyright (c) 2021 Tarek Mohamed Abdalla <tarekkma@gmail.com>
+ *
+ * This program is free software; you can redistribute it and/or modify it under
+ * the terms of the GNU General Public License as published by the Free Software
+ * Foundation; either version 3 of the License, or (at your option) any later
+ * version.
+
+ * This program is distributed in the hope that it will be useful, but WITHOUT ANY
+ * WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A
+ * PARTICULAR PURPOSE. See the GNU General Public License for more details.
+
+ * You should have received a copy of the GNU General Public License along with
+ * this program.  If not, see <http://www.gnu.org/licenses/>.
+
+ * This work include code under:
+
  * Copyright (C) 2010 The Android Open Source Project
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
@@ -21,19 +37,29 @@
  */
 package com.ichi2.utils;
 
-import com.ichi2.anki.RobolectricTest;
+import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.core.io.JsonEOFException;
+import com.fasterxml.jackson.databind.JsonNode;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.databind.node.ArrayNode;
+import com.fasterxml.jackson.databind.node.BigIntegerNode;
+import com.ichi2.anki.AnkiSerialization;
 
+import org.intellij.lang.annotations.Language;
 import org.junit.Test;
-import org.junit.runner.RunWith;
 
+import java.math.BigInteger;
 import java.util.Arrays;
 import java.util.List;
-import java.util.Collections;
-
-import androidx.test.ext.junit.runners.AndroidJUnit4;
 
 import static com.ichi2.utils.JSONUtilsTest.assertThrowsJSONExceptionEncapsulating;
+import static com.ichi2.utils.ListUtil.assertListEquals;
 import static org.junit.Assert.*;
+
+
+import org.junit.runner.RunWith;
+
+import androidx.test.ext.junit.runners.AndroidJUnit4;
 
 /**
  * This black box test was written without inspecting the non-free org.json sourcecode.
@@ -45,13 +71,13 @@ public class JSONArrayTest {
     public void testEmptyArray() {
         JSONArray array = new JSONArray();
         assertEquals(0, array.length());
-        assertEquals("", array.join(" AND "));
-        assertThrowsJSONExceptionEncapsulating(
+        // assertEquals("", array.join(" AND "));
+        assertThrowsJSONExceptionEncapsulating(IndexOutOfBoundsException.class,
                 () -> array.get(0));
-        assertThrowsJSONExceptionEncapsulating(
+        assertThrowsJSONExceptionEncapsulating(IndexOutOfBoundsException.class,
                 () -> array.getBoolean(0));
         assertEquals("[]", array.toString());
-        assertEquals("[]", array.toString(4));
+        // assertEquals("[]", array.toString(4)); // not implemented
         // out of bounds is co-opted with defaulting
         assertTrue(array.isNull(0));
         assertNull(array.opt(0));
@@ -82,9 +108,9 @@ public class JSONArrayTest {
         JSONArray array = new JSONArray();
         array.put(true);
         array.put(false);
-        array.put(2, false);
-        array.put(3, false);
-        array.put(2, true);
+        array.put(new Integer(2), false);
+        array.put(new Integer(3), false);
+        array.put(new Integer(2), true);
         assertEquals("[true,false,true,false]", array.toString());
         assertEquals(4, array.length());
         assertEquals(Boolean.TRUE, array.get(0));
@@ -103,7 +129,7 @@ public class JSONArrayTest {
         assertEquals("false", array.getString(1));
         assertEquals("true", array.optString(2));
         assertEquals("false", array.optString(3, "x"));
-        assertEquals("[\n     true,\n     false,\n     true,\n     false\n]", array.toString(5));
+        // assertEquals("[\n     true,\n     false,\n     true,\n     false\n]", array.toString(5)); not implemented
         JSONArray other = new JSONArray();
         other.put(true);
         other.put(false);
@@ -124,34 +150,6 @@ public class JSONArrayTest {
         assertEquals(true, other.optBoolean(2));
         assertEquals(false, other.getBoolean(3));
     }
-    @Test
-    public void testNulls() {
-        JSONArray array = new JSONArray();
-        array.put(3, null);
-        array.put(0, JSONObject.NULL);
-        assertEquals(4, array.length());
-        assertEquals("[null,null,null,null]", array.toString());
-        // there's 2 ways to represent null; each behaves differently!
-        assertEquals(JSONObject.NULL, array.get(0));
-        assertThrowsJSONExceptionEncapsulating(
-                () -> array.get(1));
-        assertThrowsJSONExceptionEncapsulating(
-                () -> array.get(2));
-        assertThrowsJSONExceptionEncapsulating(
-                () -> array.get(3));
-        assertEquals(JSONObject.NULL, array.opt(0));
-        assertEquals(null, array.opt(1));
-        assertEquals(null, array.opt(2));
-        assertEquals(null, array.opt(3));
-        assertTrue(array.isNull(0));
-        assertTrue(array.isNull(1));
-        assertTrue(array.isNull(2));
-        assertTrue(array.isNull(3));
-        assertEquals("null", array.optString(0));
-        assertEquals("", array.optString(1));
-        assertEquals("", array.optString(2));
-        assertEquals("", array.optString(3));
-    }
 
     /**
      * Our behaviour is questioned by this bug:
@@ -160,15 +158,15 @@ public class JSONArrayTest {
     @Test
     public void testParseNullYieldsJSONObjectNull() {
         JSONArray array = new JSONArray("[\"null\",null]");
-        array.put(null);
+        // array.put((Object) null);
         assertEquals("null", array.get(0));
         assertEquals(JSONObject.NULL, array.get(1));
-        assertThrowsJSONExceptionEncapsulating(
-                () -> array.get(2));
+        //assertThrowsJSONExceptionEncapsulating(
+        //        () -> array.get(2));
         assertEquals("null", array.getString(0));
         assertEquals("null", array.getString(1));
-        assertThrowsJSONExceptionEncapsulating(
-                () -> array.getString(2));
+        // assertThrowsJSONExceptionEncapsulating(
+        //        () -> array.getString(2));
     }
     @Test
     public void testNumbers() {
@@ -179,7 +177,10 @@ public class JSONArrayTest {
         array.put(-0d);
         assertEquals(4, array.length());
         // toString() and getString(int) return different values for -0d
-        assertEquals("[4.9E-324,9223372036854775806,1.7976931348623157E308,-0]", array.toString());
+        // jackson add .0 to indicate double. org.json do not. So difference in output here
+        //assertEquals("[4.9E-324,9223372036854775806,1.7976931348623157E308,-0]", array.toString());
+        assertEquals("[4.9E-324,9223372036854775806,1.7976931348623157E308,-0.0]", array.toString());
+        // Can't be done in jackson without rewritting
         assertEquals(Double.MIN_VALUE, array.get(0));
         assertEquals(9223372036854775806L, array.get(1));
         assertEquals(Double.MAX_VALUE, array.get(2));
@@ -210,7 +211,7 @@ public class JSONArrayTest {
         other.put(Double.MAX_VALUE);
         other.put(-0d);
         assertTrue(array.equals(other));
-        other.put(0, 0L);
+        other.put(new Integer(0), 0L);
         assertFalse(array.equals(other));
     }
     @Test
@@ -226,8 +227,8 @@ public class JSONArrayTest {
                 array.toString());
         // although the documentation doesn't mention it, join() escapes text and wraps
         // strings in quotes
-        assertEquals("\"true\" \"5.5\" \"9223372036854775806\" \"null\" \"5\\\"8' tall\"",
-                array.join(" "));
+        // assertEquals("\"true\" \"5.5\" \"9223372036854775806\" \"null\" \"5\\\"8' tall\"",
+        //        array.join(" "));
         assertEquals("true", array.get(0));
         assertEquals("null", array.getString(3));
         assertEquals("5\"8' tall", array.getString(4));
@@ -258,32 +259,6 @@ public class JSONArrayTest {
         assertEquals(-1.0d, array.optDouble(3, -1.0d), 0);
     }
     @Test
-    public void testJoin() {
-        JSONArray array = new JSONArray();
-        array.put(null);
-        assertEquals("null", array.join(" & "));
-        array.put("\"");
-        assertEquals("null & \"\\\"\"", array.join(" & "));
-        array.put(5);
-        assertEquals("null & \"\\\"\" & 5", array.join(" & "));
-        array.put(true);
-        assertEquals("null & \"\\\"\" & 5 & true", array.join(" & "));
-        array.put(new JSONArray(Arrays.asList(true, false)));
-        assertEquals("null & \"\\\"\" & 5 & true & [true,false]", array.join(" & "));
-        array.put(new JSONObject(Collections.singletonMap("x", 6)));
-        assertEquals("null & \"\\\"\" & 5 & true & [true,false] & {\"x\":6}", array.join(" & "));
-    }
-    @Test
-    public void testJoinWithNull() {
-        JSONArray array = new JSONArray(Arrays.asList(5, 6));
-        assertEquals("5null6", array.join(null));
-    }
-    @Test
-    public void testJoinWithSpecialCharacters() {
-        JSONArray array = new JSONArray(Arrays.asList(5, 6));
-        assertEquals("5\"6", array.join("\""));
-    }
-    @Test
     public void testToJSONObject() {
         JSONArray keys = new JSONArray();
         keys.put("a");
@@ -295,22 +270,8 @@ public class JSONArrayTest {
         assertEquals(5.5d, object.get("a"));
         assertEquals(false, object.get("b"));
         keys.put(0, "a");
-        values.put(0, 11.0d);
+        values.put(new Integer(0), 11.0d);
         assertEquals(5.5d, object.get("a"));
-    }
-    @Test
-    public void testToJSONObjectWithNulls() {
-        JSONArray keys = new JSONArray();
-        keys.put("a");
-        keys.put("b");
-        JSONArray values = new JSONArray();
-        values.put(5.5d);
-        values.put(null);
-        // null values are stripped!
-        JSONObject object = values.toJSONObject(keys);
-        assertEquals(1, object.length());
-        assertFalse(object.has("b"));
-        assertEquals("{\"a\":5.5}", object.toString());
     }
     @Test
     public void testToJSONObjectMoreNamesThanValues() {
@@ -350,17 +311,9 @@ public class JSONArrayTest {
         assertThrowsJSONExceptionEncapsulating(
                 () -> array.put(Double.NaN));
         assertThrowsJSONExceptionEncapsulating(
-                () -> array.put(0, Double.NEGATIVE_INFINITY));
+                () -> array.put(new Integer(0), Double.NEGATIVE_INFINITY));
         assertThrowsJSONExceptionEncapsulating(
-                () -> array.put(0, Double.POSITIVE_INFINITY));
-    }
-    @Test
-    public void testPutUnsupportedNumbersAsObject() {
-        JSONArray array = new JSONArray();
-        array.put(Double.valueOf(Double.NaN));
-        array.put(Double.valueOf(Double.NEGATIVE_INFINITY));
-        array.put(Double.valueOf(Double.POSITIVE_INFINITY));
-        assertEquals(null, array.toString());
+                () -> array.put(new Integer(0), Double.POSITIVE_INFINITY));
     }
     /**
      * Although JSONArray is usually defensive about which numbers it accepts,
@@ -373,12 +326,6 @@ public class JSONArrayTest {
         assertEquals(5.5, array.getDouble(0), 0);
         assertEquals(Double.NaN, array.getDouble(1), 0);
     }
-    @Test
-    public void testToStringWithUnsupportedNumbers() {
-        // when the array contains an unsupported number, toString returns null!
-        JSONArray array = new JSONArray(Arrays.asList(5.5, Double.NaN));
-        assertNull(array.toString());
-    }
 
     @Test
     public void testListConstructorCopiesContents() {
@@ -388,35 +335,6 @@ public class JSONArrayTest {
         assertEquals(5, array.get(0));
     }
     @Test
-    public void testTokenerConstructor() {
-        JSONArray object = new JSONArray(new JSONTokener("[false]"));
-        assertEquals(1, object.length());
-        assertEquals(false, object.get(0));
-    }
-    @Test
-    public void testTokenerConstructorWrongType() {
-        assertThrowsJSONExceptionEncapsulating(
-                () -> new JSONArray(new JSONTokener("{\"foo\": false}")));
-    }
-    @Test
-    public void testTokenerConstructorNull() {
-        try {
-            new JSONArray((JSONTokener) null);
-            fail();
-        } catch (NullPointerException e) {
-        }
-    }
-    @Test
-    public void testTokenerConstructorParseFail() {
-        try {
-            new JSONArray(new JSONTokener("["));
-            fail();
-        } catch (JSONException e) {
-        } catch (StackOverflowError e) {
-            fail("Stack overflowed on input: \"[\"");
-        }
-    }
-    @Test
     public void testStringConstructor() {
         JSONArray object = new JSONArray("[false]");
         assertEquals(1, object.length());
@@ -424,7 +342,7 @@ public class JSONArrayTest {
     }
     @Test
     public void testStringConstructorWrongType() {
-        assertThrowsJSONExceptionEncapsulating(
+        assertThrowsJSONExceptionEncapsulating(JSONException.class,
                 () -> new JSONArray("{\"foo\": false}"));
     }
     @Test
@@ -432,13 +350,14 @@ public class JSONArrayTest {
         try {
             new JSONArray((String) null);
             fail();
-        } catch (NullPointerException e) {
+        } catch (JSONException e) {
+            assertEquals(e.getCause().getClass(), IllegalArgumentException.class);
         }
     }
     @Test
     public void testStringConstructorParseFail() {
         try {
-            assertThrowsJSONExceptionEncapsulating(
+            assertThrowsJSONExceptionEncapsulating(JsonEOFException.class,
                     () -> new JSONArray("["));
         } catch (StackOverflowError e) {
             fail("Stack overflowed on input: \"[\"");
@@ -460,13 +379,400 @@ public class JSONArrayTest {
         assertEquals(null, array.opt(-3));
         assertEquals("", array.optString(3));
         assertEquals("", array.optString(-3));
-        assertThrowsJSONExceptionEncapsulating(
+        assertThrowsJSONExceptionEncapsulating(IndexOutOfBoundsException.class,
                 () -> array.get(3));
-        assertThrowsJSONExceptionEncapsulating(
+        assertThrowsJSONExceptionEncapsulating(IndexOutOfBoundsException.class,
                 () -> array.get(-3));
-        assertThrowsJSONExceptionEncapsulating(
+        assertThrowsJSONExceptionEncapsulating(IndexOutOfBoundsException.class,
                 () -> array.getString(3));
-        assertThrowsJSONExceptionEncapsulating(
+        assertThrowsJSONExceptionEncapsulating(IndexOutOfBoundsException.class,
                 () -> array.getString(-3));
+    }
+
+    @Test
+    public void testDatabindingSerializeDeserialize() throws JsonProcessingException {
+        @Language("JSON") String jsonArrayString = "[\"a\",\"b\",{\"c\":\"d\"},[\"e\",\"f\",[\"g\"]]]";
+        JSONArray arr = new ObjectMapper().readValue(jsonArrayString, JSONArray.class);
+
+        assertEquals(arr.get(0), "a");
+        assertEquals(arr.get(1), "b");
+        assertEquals(arr.getJSONObject(2).get("c"), "d");
+        assertEquals(arr.getJSONArray(3).get(0), "e");
+        assertEquals(arr.getJSONArray(3).get(1), "f");
+        assertEquals(arr.getJSONArray(3).getJSONArray(2).get(0), "g");
+
+        String serializedJsonString = AnkiSerialization.getObjectMapper().writeValueAsString(arr);
+        assertEquals(jsonArrayString, serializedJsonString);
+    }
+
+
+    @Test
+    public void emptyJSONArray() {
+        JSONArray jsonArray = new JSONArray();
+        assertEquals("[]", jsonArray.toString());
+    }
+
+
+    @Test
+    public void createJSONArray() {
+        ArrayNode arrayNode = new ObjectMapper().createArrayNode();
+        arrayNode.add(1);
+        arrayNode.add(1.2);
+
+        JSONArray jsonArray = new JSONArray(arrayNode);
+        jsonArray.put(55);
+
+
+        assertEquals(arrayNode, jsonArray.getRootJsonNode());
+        assertEquals("[1,1.2,55]", jsonArray.toString());
+    }
+
+
+    @Test
+    public void testJSONArray_from_JSONArray() {
+        JSONArray jsonArray1 = new JSONArray();
+
+        jsonArray1.put(false);
+
+        JSONArray jsonArray2 = new JSONArray(jsonArray1);
+
+        // not same reference
+        assertNotSame(jsonArray1, jsonArray2);
+        // same content
+        assertEquals(jsonArray1.getRootJsonNode(), jsonArray2.getRootJsonNode());
+
+        jsonArray1.put(55);
+
+        // content diverged
+        assertNotEquals(jsonArray1.getRootJsonNode(), jsonArray2.getRootJsonNode());
+    }
+
+
+    @Test
+    public void testWillParseFromString() {
+        String jsonString = "[\"a\",\"b\",5.5,4,false]";
+        JSONArray array = new JSONArray(jsonString);
+
+        assertEquals("a", array.get(0));
+        assertEquals("b", array.get(1));
+        assertEquals(5.5, array.get(2));
+        assertEquals(4, array.get(3));
+        assertEquals(false, array.get(4));
+    }
+
+
+    @Test
+    public void testCreateFromArray() {
+        int[] arr1 = new int[] {1, 23, 45, 66, 77, 1};
+        JSONArray jarr1 = new JSONArray(arr1);
+        for (int i = 0; i < arr1.length; i++) {
+            assertEquals(arr1[i], jarr1.getInt(i));
+        }
+
+
+        Long[] arr2 = new Long[] {1L, 23L, 45L, 66L, 77L, 1L};
+        JSONArray jarr2 = new JSONArray(arr2);
+        for (int i = 0; i < arr2.length; i++) {
+            assertEquals(arr2[i], (Long) jarr2.getLong(i));
+        }
+    }
+
+
+    @Test
+    public void testCreateFromCollection() {
+        List<Double> doubleList = Arrays.asList(1.0, 44.4, 22.4, 897.5);
+        JSONArray doubleListJSON = new JSONArray(doubleList);
+        for (int i = 0; i < doubleList.size(); i++) {
+            assertEquals(doubleList.get(i), (Double) doubleListJSON.getDouble(i));
+        }
+    }
+
+
+    @Test
+    public void testCreateFromIterator() {
+        List<String> list = Arrays.asList("a", "b", "c", "d", "e", "f");
+        JSONArray json = new JSONArray(list.iterator());
+        for (int i = 0; i < list.size(); i++) {
+            assertEquals(list.get(i), json.getString(i));
+        }
+    }
+
+
+    @Test
+    public void testPutGetInt() {
+        JSONArray jsonArray = new JSONArray();
+        jsonArray.put(22);
+        assertEquals(22, jsonArray.get(0));
+        assertEquals(22, jsonArray.getInt(0));
+    }
+
+
+    @Test
+    public void testPutGetDouble() {
+        JSONArray jsonArray = new JSONArray();
+        jsonArray.put(22.5);
+        assertEquals(22.5, jsonArray.get(0));
+        assertEquals(22.5, jsonArray.getDouble(0), 0);
+    }
+
+
+    @Test
+    public void testPutGetString() {
+        JSONArray jsonArray = new JSONArray();
+        jsonArray.put("tarekkma");
+        assertEquals("tarekkma", jsonArray.get(0));
+        assertEquals("tarekkma", jsonArray.getString(0));
+    }
+
+
+    @Test
+    public void testPutGetJSONArray() {
+        JSONArray jsonArray = new JSONArray();
+
+        JSONArray content = new JSONArray("[1,2,4,66,32,2.3]");
+
+        jsonArray.put(content);
+        assertEquals(content, jsonArray.get(0));
+        assertEquals(content, jsonArray.getJSONArray(0));
+
+        assertThrows(JSONException.class, () -> {
+            jsonArray.getJSONObject(0);
+        });
+    }
+
+
+    @Test
+    public void testPutGetJSONObject() {
+        JSONArray jsonArray = new JSONArray();
+
+        JSONObject content = new JSONObject("{\"a\": \"b\",\"c\": [\"a\"],\"d\": {\"name\": \"test\"}}");
+
+        jsonArray.put(content);
+        assertEquals(content, jsonArray.get(0));
+        assertEquals(content, jsonArray.getJSONObject(0));
+
+        assertThrows(JSONException.class, () -> {
+            jsonArray.getJSONArray(0);
+        });
+    }
+
+
+    @Test
+    public void testPutGetObject() {
+        JSONArray jsonArray = new JSONArray();
+
+        Object content = JSONObject.NULL;
+
+        jsonArray.put(content);
+        assertEquals(content, jsonArray.get(0));
+    }
+
+
+    @SuppressWarnings("ConstantConditions")
+    @Test
+    public void testPutIndexGetBoolean() {
+        JSONArray jsonArray = new JSONArray();
+
+        boolean content = false;
+
+        jsonArray.put((Integer) 1, content);
+
+        assertEquals(JSONObject.NULL, jsonArray.get(0));
+        assertEquals(content, jsonArray.get(1));
+        assertEquals(content, jsonArray.getBoolean(1));
+    }
+
+
+    @Test
+    public void testPutIndexGetDouble() {
+        JSONArray jsonArray = new JSONArray();
+
+        double content = 2323.2;
+
+        jsonArray.put((Integer) 1, content);
+
+        assertEquals(JSONObject.NULL, jsonArray.get(0));
+        assertEquals(content, jsonArray.get(1));
+        assertEquals(content, jsonArray.getDouble(1), 0);
+    }
+
+
+    @Test
+    public void testPutIndexGetInt() {
+        JSONArray jsonArray = new JSONArray();
+
+        int content = 12;
+
+        jsonArray.put((Integer) 1, content);
+
+        assertEquals(JSONObject.NULL, jsonArray.get(0));
+        assertEquals(content, jsonArray.get(1));
+        assertEquals(content, jsonArray.getInt(1));
+    }
+
+
+    @Test
+    public void testPutIndexGetLong() {
+        JSONArray jsonArray = new JSONArray();
+
+        long content = 12L;
+
+        jsonArray.put((Integer) 1, content);
+
+        assertEquals(JSONObject.NULL, jsonArray.get(0));
+        assertEquals(content, jsonArray.get(1));
+        assertEquals(content, jsonArray.getLong(1));
+    }
+
+
+    @Test
+    public void testPutIndexGetObject() {
+        JSONArray jsonArray = new JSONArray();
+
+        Object content = JSONObject.NULL;
+
+        jsonArray.put(1, content);
+
+        assertEquals(JSONObject.NULL, jsonArray.get(0));
+        assertEquals(content, jsonArray.get(1));
+    }
+
+
+    @Test
+    public void testPutIndexGetJsonNode() {
+        JSONArray jsonArray = new JSONArray();
+
+        JsonNode content = BigIntegerNode.valueOf(BigInteger.TEN);
+
+        jsonArray.put(1, content);
+
+        assertEquals(JSONObject.NULL, jsonArray.get(0));
+        assertEquals(content, jsonArray.getJsonNode(1));
+    }
+
+
+    @Test
+    public void testOptString() {
+        JSONArray jsonArray = new JSONArray("[1,\"a\", false]");
+        assertEquals("a", jsonArray.optString(1));
+        assertEquals("1", jsonArray.optString(0));
+        assertEquals("false", jsonArray.optString(2));
+        assertEquals("", jsonArray.optString(10));
+        assertEquals("", jsonArray.optString(-1));
+    }
+
+
+    @Test
+    public void testDeepClone() {
+        JSONArray ja1 = new JSONArray("[1,\"a\", false]");
+        JSONArray ja2 = ja1.deepClone();
+
+        assertNotSame(ja1, ja2);
+        assertEquals(ja1.getRootJsonNode(), ja2.getRootJsonNode());
+
+        ja1.put("ahlan");
+
+        assertNotSame(ja1, ja2);
+        assertNotEquals(ja1.getRootJsonNode(), ja2.getRootJsonNode());
+    }
+
+
+    @Test
+    public void test_jsonArrayIterable() {
+        JSONArray ja1 = new JSONArray("[1]");
+        JSONArray ja2 = new JSONArray("[2]");
+        JSONArray ja3 = new JSONArray("[3]");
+        List<JSONArray> jsonArrays = Arrays.asList(ja1, ja2, ja3);
+
+        JSONArray cont = new JSONArray(jsonArrays);
+
+        int c = 0;
+        for (JSONArray a : cont.jsonArrayIterable()) {
+            JSONArray expected = jsonArrays.get(c);
+            assertEquals(expected, a);
+            c++;
+        }
+    }
+
+
+    @Test
+    public void test_jsonObjectIterable() {
+        JSONObject ja1 = new JSONObject("{\"a\": \"a\"}");
+        JSONObject ja2 = new JSONObject("{\"a\": \"b\"}");
+        JSONObject ja3 = new JSONObject("{\"a\": \"c\"}");
+        List<JSONObject> jsonObjects = Arrays.asList(ja1, ja2, ja3);
+
+        JSONArray cont = new JSONArray(jsonObjects);
+
+        int c = 0;
+        for (JSONObject a : cont.jsonObjectIterable()) {
+            JSONObject expected = jsonObjects.get(c);
+            assertEquals(expected, a);
+            c++;
+        }
+
+        assertListEquals(jsonObjects, cont.toJSONObjectList());
+        assertListEquals(Arrays.asList("a", "b", "c"), cont.toStringList("a"));
+    }
+
+
+    @Test
+    public void test_stringIterable() {
+        List<String> strings = Arrays.asList("a", "b", "sds");
+
+        JSONArray cont = new JSONArray(strings);
+
+        int c = 0;
+        for (String a : cont.stringIterable()) {
+            String expected = strings.get(c);
+            assertEquals(expected, a);
+            c++;
+        }
+
+        assertListEquals(strings, cont.toStringList());
+    }
+
+
+    @Test
+    public void test_longIterable() {
+        List<Long> longs = Arrays.asList(1L, 23L, 578787L);
+
+        JSONArray cont = new JSONArray(longs);
+
+        int c = 0;
+        for (Long a : cont.longIterable()) {
+            Long expected = longs.get(c);
+            assertEquals(expected, a);
+            c++;
+        }
+
+        assertListEquals(longs, cont.toLongList());
+    }
+
+
+    @Test
+    public void testLength() {
+        JSONArray ja = new JSONArray("[1,3,5,6]");
+        ja.put(234);
+        ja.put(new JSONObject());
+
+        assertEquals(6, ja.length());
+    }
+
+
+    @Test
+    public void testIsNull() {
+        JSONArray ja = new JSONArray("[1,3,null,6]");
+        assertTrue(ja.isNull(2));
+        assertTrue(ja.isNull(-1));
+        assertTrue(ja.isNull(100));
+    }
+
+    @Test
+    public void containersAreMutable() {
+        JSONObject topLevel = new JSONObject();
+        topLevel.put("array", new JSONArray());
+        topLevel.getJSONArray("array").put(2);
+        assertEquals(2, topLevel.getJSONArray("array").get(0));
     }
 }
